docs(performance): 2026-08-27 campaign — cadence disproven, wave dynamics, mesh hardening
- New tier table (20k/100k, slots 12s vs 4s): tripling cadence moved
  confirmed TPS by ~1%; ceiling mechanism is the beacon reference-sweep +
  single-threaded pos-chain connect cycle scaling with backlog, PG never
  binding (<=26% CPU) while host CPU saturates.
- Multi-node section: confirm capacity ~const 500 tx/s across NNODES=1/3/5;
  atomic batch admission + failed-save requeue fixes ended the
  orphaned-claim intake wedge; warmup removed at 12s slots.
- Reproducing: MeshBench fund/run + scale_confirm/watch_tps on testnodes
  meshes; corrected stale mempoolMaxTx default text (4000).